Fix highlighting cutting off font kerning (#56)
Add 'font-kerning: none' CSS attribute to avoid font kerning from being
cut off.

Bug: T232490

--- a/src/less/general.less
+++ b/src/less/general.less
@@ -20,6 +20,7 @@ html.wwt-popup body {
 
 .mw-parser-output .editor-token {
 	cursor: pointer;
+	font-kerning: none;
 
 	&.active {
 		background-color: #facc48;
